# beamlib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
animations/: camera-gymbar-to-idle.json  camera-gymbar.json  camera-idle-to-gymbar.json  camera-idle-to-jumping-jack.json  camera-idle.json  (+22 more)
beamlib/: CMakeLists.txt  animator.h  camera.cpp  camera.h  easings.cpp  easings.h  frame.h  frameData.h  instance.cpp  instance.h  mesh.cpp  mesh.h  model.cpp  model.h  mouse.cpp  mouse.h  object.h  resourceManager.cpp  resourceManager.h  scene.h  shaderProgram.cpp  shaderProgram.h  texture.cpp  texture.h  transform.cpp  transform.h  utils.cpp  utils.h
beamlib/include/: beamlib.h
editor/: CMakeLists.txt  bot.hpp  cube.hpp  grid.hpp  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  root.hpp  shaderProgramStore.cpp  shaderProgramStore.h  star.hpp
editor/beamlib/: CMakeLists.txt  README.md  beamlib.cpp  beamlib.h
editor/shaders/: cube.frag.glsl  cube.vert.glsl  default.frag.glsl  default.vert.glsl  example.frag.glsl  example.vert.glsl  grid.frag.glsl  grid.vert.glsl  hi.vert.glsl  star.frag.glsl  star.vert.glsl
examples/: CMakeLists.txt  hub.cpp
examples/envmap/: CMakeLists.txt  main.cpp  models.h  scene.h  skybox.h
examples/envmap/shaders/: phong.frag.glsl  skybox.vert.glsl
examples/gumdam/: CMakeLists.txt  ball.h  depthmap.h  explosion.h  grid.h  gumdam.h  gymbar.h  lilypad.h  main.cpp  particles.h  scene.h  screen.h  skybox.h  water.h  water_screen.h
examples/texture-editor/: CMakeLists.txt  README.md  main.cpp  mesh.cpp  mesh.h
examples/toon/: CMakeLists.txt  main.cpp  models.h  scene.h  screen.h
examples/toon/shaders/: default.vert.glsl  light.frag.glsl  phong.frag.glsl  screen.frag.glsl  screen.vert.glsl  toon.frag.glsl
examples/water/: CMakeLists.txt  loader.h  main.cpp  mesh.h  models.h  scene.h  screen.h  skybox.h
examples/water/shaders/: gragon.frag.glsl  light.frag.glsl  phong.frag.glsl  screen.frag.glsl  skybox.frag.glsl  skybox.vert.glsl  water.frag.glsl  water.vert.glsl
(+38 files in other folders)
